Fixed dropdown overlap (#4109)
Fixed dropdown overlap issue by defining explicit z-indexes for
navigation and search elements.

Closes #4026

--- a/static/css/components/header-bar.less
+++ b/static/css/components/header-bar.less
@@ -174,6 +174,7 @@
     -webkit-box-ordinal-group: 6;
     -ms-flex-order: 5;
     order: 5;
+    z-index: @z-index-level-2;
 
     .more-menu {
       display: none;
@@ -228,6 +229,7 @@
     -webkit-box-flex: 1;
     -ms-flex: 1;
     flex: 1;
+    z-index: @z-index-level-1;
 
     // stylelint-disable selector-max-specificity
     // stylelint-disable max-nesting-depth
